--- a/app/src/main/res/layout/fragment_websites_list.xml
+++ b/app/src/main/res/layout/fragment_websites_list.xml
@@ -6,10 +6,16 @@
     tools:context=".WebsitesList">
 
     <LinearLayout
+        android:id="@+id/tab"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:outlineAmbientShadowColor="@color/purple_200" />
+    <LinearLayout
         android:id="@+id/linearlayout"
         android:layout_width="320dp"
         android:layout_height="100dp"
-        android:layout_weight="1"
+        android:layout_below="@+id/tab"
         android:orientation="vertical">
 
         <EditText
@@ -36,6 +42,7 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/weblist"
         android:layout_toRightOf="@+id/linearlayout"
+        android:layout_below="@+id/tab"
         android:text="Add" />
 
     <ListView
