--- a/app/src/main/res/layout/fragment_videos.xml
+++ b/app/src/main/res/layout/fragment_videos.xml
@@ -4,6 +4,49 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Videos">
+    <LinearLayout
+        android:id="@+id/tab"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:outlineAmbientShadowColor="@color/purple_200" />
+    <LinearLayout
+        android:id="@+id/linearlayout"
+        android:layout_width="320dp"
+        android:layout_height="100dp"
+        android:layout_below="@+id/tab"
+        android:orientation="vertical">
 
+        <EditText
+            android:id="@+id/editText1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:hint="Video lecture Name"/>
+
+        <EditText
+            android:id="@+id/editText2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:hint="Videos Url" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/weblist"
+        android:layout_toRightOf="@+id/linearlayout"
+        android:layout_below="@+id/tab"
+        android:text="Add" />
+
+    <ListView
+        android:id="@+id/weblist"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/linearlayout" />
 
 </RelativeLayout>
